--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/ts-plugin": "^1.10.2",
     "astro": "^4.15.6",
+    "mobile-detect": "^1.4.5",
     "typescript": "^5.6.2"
   }
 }
