--- a/package.json
+++ b/package.json
@@ -11,9 +11,22 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/tailwind": "^5.1.1",
     "@astrojs/ts-plugin": "^1.10.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.15.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.441.0",
     "mobile-detect": "^1.4.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.12",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.2"
   }
 }
