--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "flowbite-react": "^0.10.2",
     "lucide-react": "^0.441.0",
     "mobile-detect": "^1.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
