--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/ts-plugin": "^1.10.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.15.6",
