--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.441.0",
+    "markdown-to-txt": "^2.0.1",
     "mobile-detect": "^1.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
