--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/ts-plugin": "^1.10.2",
+    "@gamesome/astro-font": "^0.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.7",
