--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "lucide-react": "^0.441.0",
     "markdown-to-txt": "^2.0.1",
     "mobile-detect": "^1.4.5",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "zod": "^3.23.8"
   }
 }
