--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.441.0",
     "markdown-to-txt": "^2.0.1",
     "mobile-detect": "^1.4.5",
+    "mongodb": "^6.9.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -39,5 +40,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.2",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@astrojs/node": "^8.3.4"
   }
 }
