--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "astro": "^4.15.6",
     "astro-font": "^0.1.81",
     "axios": "^1.7.7",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
@@ -33,6 +34,7 @@
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
