--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@astrojs/node": "^8.3.4"
+    "@astrojs/node": "^8.3.4",
+    "@types/node": "^22.10.1"
   }
 }
