--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/ts-plugin": "^1.10.2",
+    "@auth/core": "^0.37.4",
     "@gamesome/astro-font": "^0.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/typography": "^0.5.15",
@@ -22,11 +23,13 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.15.6",
     "astro-font": "^0.1.81",
-    "axios": "^1.7.7",
+    "auth-astro": "^4.2.0",
+    "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.441.0",
     "markdown-to-txt": "^2.0.1",
     "mobile-detect": "^1.4.5",
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@astrojs/node": "^8.3.4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.10.1"
   }
 }
