--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/ts-plugin": "^1.10.2",
     "@auth/core": "^0.37.4",
     "@gamesome/astro-font": "^0.0.3",
+    "@googlemaps/google-maps-services-js": "^3.4.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.7",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@astrojs/node": "^8.3.4",
     "@types/file-saver": "^2.0.7",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^22.10.1"
   }
 }
