--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@gamesome/astro-font": "^0.0.3",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
