--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-quill": "^2.0.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
