Configure postfix-relay for contact form

--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.441.0",
     "markdown-to-txt": "^2.0.1",
     "mobile-detect": "^1.4.5",
     "mongodb": "^6.9.0",
+    "nodemailer": "^6.9.16",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -54,6 +54,7 @@
     "@astrojs/node": "^8.3.4",
     "@types/file-saver": "^2.0.7",
     "@types/google.maps": "^3.58.1",
-    "@types/node": "^22.10.1"
+    "@types/node": "^22.10.1",
+    "@types/nodemailer": "^6.4.17"
   }
 }
