--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/cloudflare": "^11.2.0",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/ts-plugin": "^1.10.2",
     "@auth/core": "^0.37.4",
     "@gamesome/astro-font": "^0.0.3",
     "@googlemaps/google-maps-services-js": "^3.4.0",
+    "@jridgewell/sourcemap-codec": "^1.5.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@rollup/plugin-inject": "^5.0.5",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.7",
