Add explicit nodemailer declaration d.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.astro",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "types"
   ],
   "exclude": [
     "node_modules",
