--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "markdown-to-txt": "^2.0.1",
     "mobile-detect": "^1.4.5",
     "mongodb": "^6.9.0",
+    "node": "^18.20.6",
     "nodemailer": "^6.9.16",
     "quill": "^2.0.2",
     "react": "^18.3.1",
