--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.3",
-    "@astrojs/cloudflare": "^11.2.0",
     "@astrojs/react": "^4.1.6",
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/ts-plugin": "^1.10.2",
@@ -20,9 +22,7 @@
     "@auth/core": "^0.37.4",
     "@gamesome/astro-font": "^0.0.3",
     "@googlemaps/google-maps-services-js": "^3.4.0",
-    "@jridgewell/sourcemap-codec": "^1.5.0",
     "@radix-ui/react-icons": "^1.3.0",
-    "@rollup/plugin-inject": "^5.0.5",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.18",
@@ -47,6 +47,7 @@
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
     "react-quill": "^2.0.0",
+    "require": "^0.4.4",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.12",
