--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
@@ -34,6 +34,7 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "esbuild": "^0.20.1",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.441.0",
     "markdown-to-txt": "^2.0.1",
