--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "engines": {
-    "node": "22.x"
+    "node": "20.x"
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
@@ -25,8 +25,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/alpinejs": "^3.13.11",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@vercel/analytics": "^1.4.1",
+    "alpinejs": "^3.14.8",
     "astro": "^4.15.6",
     "astro-font": "^0.1.81",
     "auth-astro": "^4.2.0",
@@ -40,7 +43,7 @@
     "markdown-to-txt": "^2.0.1",
     "mobile-detect": "^1.4.5",
     "mongodb": "^6.9.0",
-    "node": "^18.20.6",
+    "node": "^20.18.2",
     "nodemailer": "^6.9.16",
     "quill": "^2.0.2",
     "react": "^18.3.1",
