Revise img sources & correct React-Quill dependency

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18.3.5",
     "@vercel/analytics": "^1.4.1",
     "alpinejs": "^3.14.8",
+    "arctic": "^3.2.1",
     "astro": "^4.15.6",
     "astro-font": "^0.1.81",
     "auth-astro": "^4.2.0",
@@ -50,7 +51,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "require": "^0.4.4",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
