--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
@@ -61,6 +61,8 @@
   },
   "devDependencies": {
     "@astrojs/node": "^8.3.4",
+    "@babel/core": "^7.26.7",
+    "@types/babel__core": "^7.20.5",
     "@types/file-saver": "^2.0.7",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^18.19.74",
